Issue #2984331 by jrockowitz: [accessibility] Improve expand/collapse all details

--- a/css/webform.element.details.toggle.css
+++ b/css/webform.element.details.toggle.css
@@ -39,3 +39,8 @@
 .webform-details-toggle-statelink:focus {
   text-decoration: underline;
 }
+
+/* Float toogle to the right of webform tabs */
+.webform-tabs .webform-details-toggle-state-wrapper {
+  float: right
+}
